--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.png" alt="Company Logo">
+        <img src="/logo.png">
         <h1>Quote Sheet</h1>
     </div>
     
