--- a/indexbu.html
+++ b/indexbu.html
@@ -1,3 +1,6 @@
+<!-- notes -->
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +16,7 @@
             margin-bottom: 20px;
         }
         .header img {
-            max-width: 100px;
+            max-width: 90px;
         }
         .quote-details, .customer-details, .sales-rep-details, .product-details, .summary {
             width: 100%;
