--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 </head>
 <body>
     <div class="header">
-        <img src="/logo.png">
-        <h1>Quote Sheet</h1>
+        <img src="./logo.png">
+        <h1>Quote Sheet </h1>
     </div>
     
     <table class="quote-details">
